# reverse-engine

./: CMakeLists.txt  LICENSE  README.md  main.cc  trainer.cc
Core/: CMakeLists.txt  api.cc  api.hh  core.cc  core.hh  external.cc  external.hh  scanner.cc  scanner.hh  value.cc  value.hh
FakeGame/: CMakeLists.txt  main.cc
FakeMem/: CMakeLists.txt  main.cc
GUI/: CMakeLists.txt  MainWindow.cc  MainWindow.hh  ScanWindow.cc  ScanWindow.hh  SelectWindow.cc  SelectWindow.hh  classes_predefines.hh  globals.hh  main.cc
HackMe/: CMakeLists.txt  main.cc  main.hh
cmake/: missing.cmake
example/: CMakeLists.txt  trainer.cc
example/csgo_linux64/fix_resources_download/: main.cc  main.py
libreverseengine/: CMakeLists.txt  core.hh  external.hh  fix_enum.hh  scanner.cc  scanner.hh  scanroutines.cc  scanroutines.hh  storage.cc  storage.hh  value.cc  value.hh
libreverseengine/tests/: fakemem.first_search.cc
libreverseengine/wrappers/python/1/: Rectangle.cpp  Rectangle.hpp  requirements.txt  test.py
reverseengine/: CMakeLists.txt
reverseengine/binding/: CMakeLists.txt  master.cc  setup.py.in
reverseengine/include/reverseengine/: common.hh  core.hh  external.hh  globals.hh  nearest_neighbors.hh  pointer.hh  pointerscan.hh  r2_wrapper.hh  reverseengine.i  scanner.hh  scanroutines.hh  shape.hh  value.hh
reverseengine/src/: core.cc  nearest_neighbors.cc  scanner.cc  scanroutines.cc  shape.cc  value.cc
reverseengine/swig/: CMakeLists.txt
reverseengine/swig/python/: CMakeLists.txt  setup.py.in
reverseengine/test/: CMakeLists.txt  fakemem.cc
reverseengine/test/binding/: CMakeLists.txt  pybind11_knn.py  pybind11_search.py  pybind11_shape.py
reverseengine/test/reverseengine/: CMakeLists.txt  hex.cc  include.cc  knn.cc  pointer.cc  pointerscan.cc  search.cc  shape.cc  valgrind.supp
reverseengine/test/util/: README.md  fakegame.cc  fakemem.cc  siggen.cc
reverseengine/test/util/ac/: main.cc
reverseengine/test/util/fakemem/: fakemem.cc
reverseengine/test/util/siggen/: double_free.cc  invalid_free.cc  null_dereference.cc  siggen.cc
reverseengine/test/util/tutorial/: main.py  requirements.txt
reverseengine/tests/: CMakeLists.txt  fakemem.cc  search.cc  shape.cc  shape.py
utils/: hardening-check  hardening-check.pl
utils/cmake/: PVS-Studio.cmake  cheats.cmake  external.cmake  legacy.cmake
