# ┌──────────────────────────────────────────────────────────────────┐
# │  Project settings                                                │
# └──────────────────────────────────────────────────────────────────┘
project(RECore)

# ┌──────────────────────────────────────────────────────────────────┐
# │  Build executable                                                │
# └──────────────────────────────────────────────────────────────────┘
add_library(RECore
        core.hh         core.cc
        external.hh     external.cc
        scanner.hh      scanner.cc
        value.hh        value.cc
        )
