# ┌──────────────────────────────────────────────────────────────────┐
# │  Project settings                                                │
# └──────────────────────────────────────────────────────────────────┘
project(libreverseengine)

# ┌──────────────────────────────────────────────────────────────────┐
# │  Build executable                                                │
# └──────────────────────────────────────────────────────────────────┘
add_library(libreverseengine
        core.hh
        external.hh
        scanner.hh      scanner.cc
        value.hh        value.cc
        )
